<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity">

    <item android:id="@+id/i_prayer_time"
        android:icon="@drawable/ic_prayer_time_24dp"
        android:title="@string/prayer_time"/>
    <item android:id="@+id/i_compass"
        android:icon="@drawable/ic_navigation_24dp"
        android:title="@string/compass"/>
    <item android:id="@+id/i_quran"
        android:icon="@drawable/ic_holy_quran_24"
        android:title="@string/holy_quran"/>
    <item android:id="@+id/i_info"
        android:icon="@drawable/ic_info_24dp"
        android:title="@string/info"/>
    <item android:id="@+id/i_setting"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/setting"/>

</menu>