<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/dark_700"
    android:orientation="vertical"
    android:padding="@dimen/small_margin">

    <ImageView
        android:id="@+id/iv_logo_popup_quoteSetting"
        android:layout_width="@dimen/list_width_size"
        android:layout_height="@dimen/list_width_size"
        android:layout_gravity="center"
        android:src="@drawable/ic__quote_24" />

    <TextView
        android:id="@+id/tv_popup_quoteSetting_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:gravity="center"
        android:text="@string/select_the_quotes_from"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rbg_quotesDataSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_fromApi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_api"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rb_fromFavQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_fav_quote"
            android:textColor="@color/white" />
    </RadioGroup>

</LinearLayout>