<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_700"
    android:paddingLeft="@dimen/larger_margin"
    android:paddingTop="@dimen/medium_margin"
    android:paddingRight="@dimen/larger_margin"
    android:paddingBottom="@dimen/medium_margin">

    <ImageView
        android:id="@+id/iv_location_logo"
        android:layout_width="@dimen/list_width_size"
        android:layout_height="@dimen/list_width_size"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/solatkuyicon"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_changeLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/welcome_dialog"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_location_logo" />

    <LinearLayout
        android:id="@+id/rg_lcation_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_changeLocation">

        <Button
            android:id="@+id/btn_by_latitude_longitude"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/by_latitude_amp_longitude"
            android:textSize="@dimen/small_text_size" />

        <Button
            android:id="@+id/btn_by_gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/by_gps"
            android:textSize="@dimen/small_text_size" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>