<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.boarding.BoardingActivity">

    <ImageView
        android:id="@+id/iv_slide_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_fajr"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/dp48"
        android:paddingTop="@dimen/dp12"
        android:paddingRight="@dimen/dp48"
        android:paddingBottom="@dimen/dp12"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_location_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/dp24"
            android:contentDescription="@string/solatkuyicon"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ImageView.Corner" />

        <TextView
            android:id="@+id/tv_changeLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/welcome_dialog"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_location_logo" />

        <LinearLayout
            android:id="@+id/rg_lcation_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_by_latitude_longitude"
                style="@style/ButtonBorderLightWithRadius"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/dp8"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/by_latitude_amp_longitude"
                android:textSize="@dimen/sp12" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_by_gps"
                style="@style/ButtonBorderLight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/dp8"
                android:text="@string/by_gps"
                android:textSize="@dimen/sp12" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>