<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragmentsetting.view.FragmentSetting">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/bottomSheet_size"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/rg_lcation_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rg_lcation_setting"
            app:layout_constraintTop_toTopOf="@+id/rg_lcation_setting">

            <TextView
                android:id="@+id/tv_cur_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:text="@string/current_location"
                android:textSize="@dimen/medium_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tv_text_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/latitude"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cur_loc" />

            <TextView
                android:id="@+id/tv_view_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="-7.55611"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_text_latitude"
                app:layout_constraintTop_toBottomOf="@+id/tv_cur_loc" />

            <TextView
                android:id="@+id/tv_text_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/longitude"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_text_latitude" />

            <TextView
                android:id="@+id/tv_view_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="110.83167"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_text_longitude"
                app:layout_constraintTop_toBottomOf="@+id/tv_view_latitude" />

            <TextView
                android:id="@+id/tv_text_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/city"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_text_longitude" />

            <TextView
                android:id="@+id/tv_view_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Solo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_text_city"
                app:layout_constraintTop_toBottomOf="@+id/tv_view_longitude" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin">

            <ImageView
                android:id="@+id/iv_location_logo"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:src="@drawable/ic_location_24dp"
                app:layout_constraintBottom_toTopOf="@+id/rg_lcation_setting"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:text="@string/changelocation"
                android:textSize="@dimen/medium_text_size"
                app:layout_constraintBottom_toTopOf="@+id/rg_lcation_setting"
                app:layout_constraintStart_toEndOf="@+id/iv_location_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.506" />

            <RadioGroup
                android:id="@+id/rg_lcation_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <RadioButton
                    android:id="@+id/rb_byLatitudeLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/by_latitude_amp_longtitude"
                    android:textSize="@dimen/small_text_size" />

                <RadioButton
                    android:id="@+id/rb_byGps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/by_gps"
                    android:textSize="@dimen/small_text_size" />

                <RadioButton
                    android:id="@+id/rb_byCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/by_city"
                    android:textSize="@dimen/small_text_size" />

            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>